--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -1,16 +1,5 @@
 @import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
 
-/*
-*{
-	box-sizing: border-box;
-}
-
-
-html,body{
-	margin: 0;
-}
-*/
-
 .setup-table{
 	label{
 		width: 100%;
@@ -35,13 +24,6 @@ html,body{
 	}
 }
 
-/*
-#app{
-	background-color :white;
+.rank-popover-list{
+	width: 15em;
 }
-
-
-body, html{
-	background-color: #888;
-}
-*/
