More minor styling tweaks.

--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -6,14 +6,11 @@
 	}
 }
 
+body{
+	padding-top: 1em;
+}
+
 .summary-table{
-
-
-	/*
-	.warning a{
-		color: $state-warning-text;
-	}
-	*/
 
 	.roles{
 		list-style: none;
