--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -1,4 +1,5 @@
 @import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
+@import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/theme";
 
 .setup-table{
 	label{
@@ -10,7 +11,14 @@ body{
 	padding-top: 1em;
 }
 
+.setup-table{
+	label a{
+		display: block;
+	}
+}
+
 .summary-table{
+
 
 	.roles{
 		list-style: none;
@@ -25,7 +33,7 @@ body{
 	}
 
 	.glyphicon-heart{
-		color: #c00;
+		color: #800;
 	}
 
 	td:nth-child(n + 2),
@@ -36,4 +44,13 @@ body{
 
 .rank-popover-list{
 	width: 15em;
+}
+
+$border-radius-rounded: 5px;
+
+.table-rounded{
+	border: 1px solid $table-border-color;
+	border-radius: $border-radius-large;
+	border-collapse: separate;
+	border-spacing: 0px;
 }
