--- a/cdn/stylesheets/app-1.0.0.css
+++ b/cdn/stylesheets/app-1.0.0.css
@@ -1,4 +1,4 @@
-/**//*! me2smc 2014-10-03 08:24 */
+/**//*! me2smc 2014-10-03 10:35 */
 
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 html {
@@ -5690,3 +5690,9 @@ body {
   border-radius: 6px;
   border-collapse: separate;
   border-spacing: 0px; }
+
+.panel-footer {
+  padding-top: 0;
+  padding-bottom: 0; }
+  .panel-footer .row > * {
+    padding: 10px 15px; }
