--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -1,5 +1,7 @@
-@import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
-@import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/theme";
+// @import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
+// @import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/theme";
+
+@import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
 
 .setup-table{
 	label{
